# weather_checker

./: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
checker/: app.py  config.py  manage.py  wsgi.py
checker/api/: __init__.py  views.py
checker/api/resources/: __init__.py
checker/api/weather/: __init__.py  checkers.py  exceptions.py  models.py  resources.py  serializers.py  services.py
checker/services/: weather.py
compose/: Dockerfile  nginx.conf  start
tests/: test_checkers.py  test_weather_api_consumer.py  test_weather_api_requester.py  test_weather_checker.py  test_weather_resources.py  test_weather_serializer.py
