[tool.poetry]
name = "checker"
version = "0.1.0"
description = ""
authors = ["amir <amirkhakshour@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-restful = "^0.3.8"
click = "^7.1.2"
python-dotenv = "^0.14.0"
pytest = "^6.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
